# old_255_main

./: README.md
demos/bad_schema_client_api/: raise.py
demos/docker_demo/: nginx-deployment.yaml  node-serice.yml
demos/docker_hello/docker/tests/: test_docker.py
demos/flask_ci_demo/.github/workflows/: ci.yml
demos/flask_ci_demo/api/: app.py
demos/flask_ci_demo/resources/: default.py
demos/impute_api/: impute.py  train_pipeline.py
demos/kustomize_skaffold_demo/: skaffold.yaml
demos/lr_redis/: app.py
demos/ml_api/: deployment.yaml  docker-compose.yaml
demos/model_predictions_api/: simple_sk.py  train.py
demos/redis_api/: app.py  app_cache.py  config.py
demos/redis_demo/: cache.py  test.py
demos/retraining/object/: app.py  train_pipeline.py
demos/retraining/registry/: train_pipeline.py
demos/stateful/: postgres.yaml
infra/: .gitignore  acr.tf  aks.tf  bootstrap_aks.sh  dns.tf  helmfile.yaml  k8s_config.tf  locals.tf  logging.tf  main.tf  namespace_config.tf  output.tf  security.tf
infra/cluster_configure/: bootstrap_aks.sh  grafana.yaml  helmfile.yaml  kiali.yaml  prometheus.yaml
infra/github/: pyproject.toml
infra/github/runner/: main.py
infra/yamls/: gateway.yaml  joslateriii.yaml  mkarch.yaml
labs/lab_1/: .gitignore  README.md  lab_1.md  test_curl.sh
labs/lab_1/solution/: run.sh
labs/lab_1/solution/lab1/: Dockerfile  pyproject.toml
labs/lab_1/solution/lab1/lab1/: main.py
labs/lab_1/solution/lab1/tests/: test_lab1.py
labs/lab_2/: .gitignore  README.md
labs/lab_2/solution/: run.sh
labs/lab_2/solution/lab2/: Dockerfile  pyproject.toml
labs/lab_2/solution/lab2/tests/: test_hello.py  test_predict.py
labs/lab_2/trainer/: train.py
labs/lab_3/: README.md
labs/lab_3/solution/: example.out
labs/lab_3/solution/lab3/: model_pipeline.pkl  pyproject.toml
labs/lab_3/solution/lab3/lab3/: main.py
labs/lab_3/solution/lab3/tests/: test_hello.py  test_predict.py
labs/lab_4/: README.md
labs/lab_4/solution/: run.sh
labs/lab_5/: README.md  load.js
labs/project/mlapi/: run.sh
(+32 files in other folders)
