[tool.poetry]
name = "lab3"
version = "0.3.0"
description = ""
authors = ["James Winegar <jameswine@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
fastapi = "^0.75.0"
uvicorn = "^0.17.5"
joblib = "^1.1.0"
scipy = "^1.7"
scikit-learn = "1.0.2"
requests = "^2.27.1"
fastapi-redis-cache = "^0.2.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
isort = "^5.10.1"
black = "^22.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
